[package]
name = "zbus_polkit"
version = "4.0.0"
authors = [
    "Marc-André Lureau <marcandre.lureau@redhat.com>",
    "Zeeshan Ali Khan <zeenix@gmail.com>",
]
edition = "2021"
rust-version = "1.64"

description = "PolicyKit binding"
repository = "https://github.com/dbus2/zbus_polkit/"
keywords = ["D-Bus", "DBus", "IPC"]
license = "MIT"
categories = ["os::unix-apis"]
readme = "README.md"

[features]
default = ["zbus/async-io"]
tokio = ["zbus/tokio"]

[dependencies]
zbus = { version = "4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"
enumflags2 = { version = "0.7.9", features = ["serde"] }
static_assertions = "1.1.0"

[dev-dependencies]
byteorder = "1.5.0"
async-std = { version = "1.12.0", features = ["attributes"] }
